--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </div>
 <script src="src/settings.59f8a.js" charset="utf-8"></script>
 <script src="vconsole.min.bac6b.js"></script>
-<script src="main.ea00c.js" charset="utf-8"></script>
+<script src="main.0ab01.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
