--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       <span style="width: 0%"></span>
     </div>
   </div>
-<script src="src/settings.59f8a.js" charset="utf-8"></script>
+<script src="src/settings.bed1f.js" charset="utf-8"></script>
 <script src="vconsole.min.bac6b.js"></script>
-<script src="main.6a351.js" charset="utf-8"></script>
+<script src="main.318b3.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
