--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </div>
 <script src="src/settings.bed1f.js" charset="utf-8"></script>
 <script src="vconsole.min.bac6b.js"></script>
-<script src="main.318b3.js" charset="utf-8"></script>
+<script src="main.e1290.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
